# ocaml-ci

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .ocamlformat  .ocamlformat-enable  CODE_OF_CONDUCT.md  Caddyfile  Dockerfile  Dockerfile.gitlab  Dockerfile.rsync-worker  Dockerfile.web  LICENSE.md  Makefile  README.md  client-utilities.opam  deploy.sh  docker-compose.yml  dream-web.opam  dune  dune-project  gitlab-deploy.sh  gitlab-stack.yml  ocaml-ci-api.opam  ocaml-ci-client-lib.opam  ocaml-ci-client.opam  ocaml-ci-client.opam.template  ocaml-ci-gitlab.opam  ocaml-ci-gitlab.opam.template  ocaml-ci-service.opam  ocaml-ci-service.opam.template  ocaml-ci-solver.opam  ocaml-ci-solver.opam.template  ocaml-ci-web.opam  ocaml-ci-web.opam.template  ocaml-ci.opam  ocaml-ci.opam.template  stack.yml  stack.yml.in  tailwind.config.js
.github/ISSUE_TEMPLATE/: blank-issue.md  bug_report.md  feature_request.md
api/: client.ml  client.mli  common.ml  common.mli  dune  ocaml_ci_api.ml  raw.ml  schema.capnp  solver.ml  worker.ml
builder-config/: known_hosts
builder-config/docker/contexts/meta/84677fcbf2aff0c2f74b1311b1683e0d93e35c2194b0f3a3b034316d2a268b12/: meta.json
client/: dune  logging.ml  main.ml
deploy-data/: github-organisations.txt  gitlab-organisations.txt
doc/: dev.md  docker-deployment.md  example-stack.yml  gitlab-dev.md  timestamps_durations.md
dream-web/: .ocamlformat  README.md  backend.ml  dune  github.ml  main.ml  main.mli
dream-web/controller/: badges.ml  dune  github.ml  index.ml
dream-web/view/: client_error.eml.ml  client_error.ml  dune  github.eml.ml  github.ml  github.mli  index.eml.ml  index.ml  template.eml.ml  template_tyxml.ml
github/: dune  gh.ml  logging.ml  main.ml  op.ml  os.ml  os.mli  pipeline.ml  pipeline.mli  spec.ml  spec.mli
gitlab/: dune  gitlab.ml  local.ml  main.ml  pipeline.ml  pipeline.mli
lib/: analyse.ml  analyse.mli  analyse_ocamlformat.ml  analyse_ocamlformat.mli  backend_solver.ml  backend_solver.mli  build.ml  build.mli  build_info.ml  builder.ml  builder.mli  buildkit_syntax.ml  buildkit_syntax.mli  cluster_build.ml  cluster_build.mli  dune  dune_build_cache.ml  dune_build_cache.mli  duniverse_build.ml  duniverse_build.mli  index.ml  index.mli  lint.ml  lint.mli  ocaml_compiler_build.ml  opam_build.ml  opam_build.mli  opam_monorepo.ml  opam_monorepo.mli  opam_version.ml  opam_version.mli  pin_depends.ml  pin_depends.mli  pipeline.ml  pipeline.mli  platform.ml  platform.mli  query.ml  query.sql  query_local.ml  (+15 more)
lib_client/: dune  run_time.ml  run_time.mli
migrations/: 20221019123702_create-build-index.down.sql  20221019123702_create-build-index.up.sql  20221129223759_create_ci_build_summary.down.sql  20221129223759_create_ci_build_summary.up.sql  20221206055325_add_messages_column_to_build_summary.down.sql  20221206055325_add_messages_column_to_build_summary.up.sql
router/: dune  main.ml
service/: analyse.ml  analyse.mli  api_impl.ml  api_impl.mli  conf.ml  dune  github.ml  github.mli  index.ml  index.mli  lint.ml  lint.mli  local.ml  logging.ml  main.ml  matrix.ml  opam_build.ml  opam_build.mli  opam_repo_pipeline.ml  pipeline.ml  pipeline.mli
solver/: dune  epoch_lock.ml  epoch_lock.mli  git_context.ml  git_context.mli  log.ml  main.ml  ocaml_ci_solver.ml  ocaml_ci_solver.mli  opam_repository.ml  opam_repository.mli  process.ml  remote_commit.ml  service.ml  service.mli  solver.ml  solver.mli
src/: conf.ml  dune  logging.ml  main.ml  opam.ml  opam.mli  pipeline.ml
static/css/: flash-messages.css  style.css
test/: dune  gen_project.ml  gen_project.mli  test.ml  test_analyse.ml  test_build_representation.ml  test_index.ml  test_index.mli  test_lwt.ml  test_lwt.mli  test_platforms.ml  test_run_time.ml  test_run_time_client.ml  test_spec.ml  test_step_representation.ml  test_variant.ml  test_web_representation.ml
test/service/: dune  gen_project.ml  gen_project.mli  test.ml  test_analyse.ml  test_conf.ml  test_index.ml  test_lwt.ml  test_pipeline.ml  test_platforms.ml  test_run_time.ml  test_run_time_client.ml  test_spec.ml  test_variant.ml
test/web/: dune  migrations  test.ml  test_build_representation.ml  test_step_representation.ml
web-ui/: README.md  backend.ml  backend.mli  badges.ml  badges.mli  dune  github.ml  github.mli  gitlab.ml  homepage.ml  log.ml  logging.ml  main.ml  main.mli  router.ml  router.mli  style.ml  template.ml
web-ui/controller/: api_github.ml  api_gitlab.ml  backend.ml  backend.mli  badges.ml  badges.mli  documentation.ml  dune  git_forge.ml  git_forge_s.ml  git_forge_s.mli  github.ml  github.mli  gitlab.ml  gitlab.mli  index.ml
web-ui/controller/api/: dune  git_forge.ml  github.ml  github.mli  gitlab.ml  gitlab.mli
web-ui/controller/ws/: dune  github.ml
web-ui/jsoo/: dune  main.ml  process_chunk.ml  steps_to_reproduce_build.ml
web-ui/representation/: build.ml  dune  repo.ml  step.ml
web-ui/static/css/: github.css  style.css  style_v1.css  tailwind.css
web-ui/static/fonts/: inter.css
web-ui/static/js/: add-repro-steps.js  alpine-clipboard.js  build-page-poll.js  dune  index-page-org-search.js  log-highlight.js  repo-page-search.js  repo-page.js  step-page-poll.js  step-page-websocket-client.js
web-ui/static/js/repo-page/: chart.js  onload.js  search.js
web-ui/view/: build.ml  build_status.ml  build_status.mli  client_error.ml  common.ml  documentation.ml  dune  git_forge.ml  git_forge.mli  git_forge_intf.ml  git_forge_s.ml  github.ml  github.mli  gitlab.ml  gitlab.mli  history.ml  index.ml  message.ml  org.ml  organisation.ml  ref.ml  ref.mli  repo.ml  repo.mli  status_tree.ml  status_tree.mli  step.ml  step.mli  template.ml  template.mli  template_v1.ml  timestamps_durations.ml  timestamps_durations.mli  tyxml_helpers.ml  url.ml
web-ui/view/api/: dune  git_forge.ml  github.ml  github.mli  gitlab.ml
web-ui/view/documentation/: build_page.ml  dune  getting_started.ml  history_page.ml  index_page.ml  refs_page.ml  repo_page.ml  step_page.ml  user_guide.ml
(+2 files in other folders)
