(subdir
 web-ui/static/css/
 (rule
  (target main.css)
  (deps
   (:config %{workspace_root}/tailwind.config.js)
   (:input %{workspace_root}/web-ui/static/css/style_v1.css)
   (source_tree %{workspace_root}/web-ui/view))
  (action
   (chdir
    %{workspace_root}
    (run tailwindcss -m -c %{config} -i %{input} -o %{target})))))

(dirs :standard \ var)

(vendored_dirs
 capnp-ocaml
 capnp-rpc
 ocurrent
 opam-0install-solver
 ocluster
 ocaml-version
 ocaml-dockerfile)
