opam-version: "2.0"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "-p" name "@doc"] {with-doc}
]
maintainer: ["talex5@gmail.com"]
authors: ["talex5@gmail.com"]
bug-reports: "https://github.com/ocurrent/ocaml-ci/issues"
homepage: "https://github.com/ocurrent/ocaml-ci"
dev-repo: "git+https://github.com/ocurrent/ocaml-ci.git"
synopsis: "Cap'n Proto API for ocaml-ci"
depends: [
  "dune" {>= "1.11"}
  "current_rpc"
  "capnp" {>= "3.4.0"}
  "capnp-rpc-lwt"
  "dockerfile"
  "alcotest" {< "1.0.0" & with-test}
  "alcotest-lwt" {with-test}
]
pin-depends: [
  ["current.dev" "git+https://github.com/ocurrent/ocurrent.git#5814658ee0bc885c0e3b2417fe9fcfd8d30d0a08"]
  ["current_ansi.dev" "git+https://github.com/ocurrent/ocurrent.git#5814658ee0bc885c0e3b2417fe9fcfd8d30d0a08"]
  ["current_docker.dev" "git+https://github.com/ocurrent/ocurrent.git#5814658ee0bc885c0e3b2417fe9fcfd8d30d0a08"]
  ["current_examples.dev" "git+https://github.com/ocurrent/ocurrent.git#5814658ee0bc885c0e3b2417fe9fcfd8d30d0a08"]
  ["current_git.dev" "git+https://github.com/ocurrent/ocurrent.git#5814658ee0bc885c0e3b2417fe9fcfd8d30d0a08"]
  ["current_github.dev" "git+https://github.com/ocurrent/ocurrent.git#5814658ee0bc885c0e3b2417fe9fcfd8d30d0a08"]
  ["current_rpc.dev" "git+https://github.com/ocurrent/ocurrent.git#5814658ee0bc885c0e3b2417fe9fcfd8d30d0a08"]
  ["current_slack.dev" "git+https://github.com/ocurrent/ocurrent.git#5814658ee0bc885c0e3b2417fe9fcfd8d30d0a08"]
  ["current_web.dev" "git+https://github.com/ocurrent/ocurrent.git#5814658ee0bc885c0e3b2417fe9fcfd8d30d0a08"]
]


