opam-version: "2.0"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "-p" name "@doc"] {with-doc}
]
synopsis: "Cap'n Proto API for ocaml-ci"
maintainer: ["talex5@gmail.com"]
authors: ["talex5@gmail.com"]
homepage: "https://github.com/ocurrent/ocaml-ci"
bug-reports: "https://github.com/ocurrent/ocaml-ci/issues"
depends: [
  "dune" {>= "1.11" & < "2.2.0"}
  "current_rpc"
  "capnp" {>= "3.4.0"}
  "capnp-rpc-lwt"
  "dockerfile"
]
dev-repo: "git+https://github.com/ocurrent/ocaml-ci.git"
