opam-version: "2.0"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "-p" name "@doc"] {with-doc}
]
maintainer: ["talex5@gmail.com"]
authors: ["talex5@gmail.com"]
bug-reports: "https://github.com/ocurrent/ocaml-ci/issues"
homepage: "https://github.com/ocurrent/ocaml-ci"
dev-repo: "git+https://github.com/ocurrent/ocaml-ci.git"
synopsis: "Command-line client for ocaml-ci"
depends: [
  "dune" {>= "1.11"}
  "current_rpc"
  "capnp-rpc-unix"
  "ocaml-ci-api"
  "dockerfile"
]
pin-depends: [
  ["current.dev" "git+https://github.com/ocurrent/ocurrent.git#5814658ee0bc885c0e3b2417fe9fcfd8d30d0a08"]
  ["current_ansi.dev" "git+https://github.com/ocurrent/ocurrent.git#5814658ee0bc885c0e3b2417fe9fcfd8d30d0a08"]
  ["current_docker.dev" "git+https://github.com/ocurrent/ocurrent.git#5814658ee0bc885c0e3b2417fe9fcfd8d30d0a08"]
  ["current_examples.dev" "git+https://github.com/ocurrent/ocurrent.git#5814658ee0bc885c0e3b2417fe9fcfd8d30d0a08"]
  ["current_git.dev" "git+https://github.com/ocurrent/ocurrent.git#5814658ee0bc885c0e3b2417fe9fcfd8d30d0a08"]
  ["current_github.dev" "git+https://github.com/ocurrent/ocurrent.git#5814658ee0bc885c0e3b2417fe9fcfd8d30d0a08"]
  ["current_rpc.dev" "git+https://github.com/ocurrent/ocurrent.git#5814658ee0bc885c0e3b2417fe9fcfd8d30d0a08"]
  ["current_slack.dev" "git+https://github.com/ocurrent/ocurrent.git#5814658ee0bc885c0e3b2417fe9fcfd8d30d0a08"]
  ["current_web.dev" "git+https://github.com/ocurrent/ocurrent.git#5814658ee0bc885c0e3b2417fe9fcfd8d30d0a08"]
]
