opam-version: "2.0"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "-p" name "@doc"] {with-doc}
]
maintainer: ["talex5@gmail.com"]
authors: ["talex5@gmail.com"]
bug-reports: "https://github.com/ocurrent/ocaml-ci/issues"
homepage: "https://github.com/ocurrent/ocaml-ci"
dev-repo: "git+https://github.com/ocurrent/ocaml-ci.git"
synopsis: "Command-line client for ocaml-ci"
depends: [
  "dune" {>= "1.11" & < "2.2.0"}
  "current_rpc"
  "capnp-rpc-unix"
  "ocaml-ci-api"
  "dockerfile"
]
