opam-version: "2.0"
synopsis: "Command-line client for ocaml-ci"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "-p" name "@doc"] {with-doc}
]
maintainer: ["talex5@gmail.com"]
authors: ["talex5@gmail.com"]
homepage: "https://github.com/ocurrent/ocaml-ci"
bug-reports: "https://github.com/ocurrent/ocaml-ci/issues"
depends: [
  "dune" {>= "1.11" & < "2.2.0"}
  "current_rpc"
  "capnp-rpc-unix"
  "ocaml-ci-api"
  "dockerfile"
]
dev-repo: "git+https://github.com/ocurrent/ocaml-ci.git"
