opam-version: "2.0"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "-p" name "@doc"] {with-doc}
]
synopsis: "Test OCaml projects on GitHub"
maintainer: ["talex5@gmail.com"]
authors: ["talex5@gmail.com"]
homepage: "https://github.com/ocurrent/ocaml-ci"
bug-reports: "https://github.com/ocurrent/ocaml-ci/issues"
depends: [
  "dune" {>= "1.11" & < "2.2.0"}
  "current_git"
  "current_github"
  "current_docker"
  "current_web"
  "current_rpc"
  "capnp-rpc-unix" {>= "0.5.0"}
  "ocaml-ci-api"
  "conf-libev"
  "dockerfile" {>= "6.3.0"}
  "alcotest" {< "1.0.0" & with-test}
  "alcotest-lwt" {with-test}
]
dev-repo: "git+https://github.com/ocurrent/ocaml-ci.git"
