opam-version: "2.0"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "-p" name "@doc"] {with-doc}
]
synopsis: "Web-server frontend for ocaml-ci"
maintainer: ["talex5@gmail.com"]
authors: ["talex5@gmail.com"]
homepage: "https://github.com/ocurrent/ocaml-ci"
bug-reports: "https://github.com/ocurrent/ocaml-ci/issues"
depends: [
  "dune" {>= "1.11" & < "2.2.0"}
  "current_rpc"
  "current_ansi"
  "prometheus-app"
  "cmdliner"
  "lwt"
  "cohttp-lwt-unix" {>= "2.2.0"}
  "tyxml"
  "capnp-rpc-unix"
  "ocaml-ci-api"
  "conf-libev"
  "dockerfile"
  "ppx_deriving_yojson"
]
dev-repo: "git+https://github.com/ocurrent/ocaml-ci.git"
