(rule
 (target static.ml)
 (deps (source_tree static))
 (action (with-stdout-to %{null}
  (run ocaml-crunch --mode=plain --output=%{target} static))))

(executable
 (package dream-web)
 (public_name dream-web)
 (name main)
 (libraries
   ansi
   dream
   logs.cli
   prometheus-app.unix
   ocaml-ci-api
   capnp-rpc-unix
   dream-web.controller
   dream-web.view))
