(library
 (name ocaml_ci_gitlab)
 (public_name ocaml-ci-gitlab)
 (libraries
  ocaml-ci
  ocaml-ci-service
  current
  current_git
  current_github
  current_gitlab
  current_docker
  current_web
  gitlab-unix
  prometheus-app.unix
  cmdliner)
 (modules pipeline gitlab))

(executables
 (names main local)
 (libraries
  logs.fmt
  logs.cli
  fmt.tty
  fmt.cli
  current
  current_web
  current_docker
  current_git
  current_github
  current_gitlab
  current_rpc
  ocluster-api
  capnp-rpc-unix
  mirage-crypto-rng.unix
  ocaml-ci
  ocaml-ci-api
  ocaml_ci_service
  ocaml_ci_gitlab
  prometheus-app.unix)
 (modules main local))

; This is a hack to work around https://github.com/ocaml/dune/issues/3499
; We first build the binaries, then copy them to a new name, then install them.
; This allows us to add in the run-time dependency on solver-service in the
; copy step.

(install
 (section bin)
 (package ocaml-ci-gitlab)
 (files
  (main-copy.exe as ocaml-ci-gitlab)))

(install
 (section bin)
 (package ocaml-ci-gitlab)
 (files
  (local-copy.exe as ocaml-ci-gitlab-local)))

(rule
 (target main-copy.exe)
 (deps
  (package solver-service))
 (action
  (copy main.exe main-copy.exe)))

(rule
 (target local-copy.exe)
 (deps
  (package solver-service))
 (action
  (copy local.exe local-copy.exe)))
