(library
 (name ocaml_ci)
 (public_name ocaml-ci)
 (preprocess
  (pps ppx_deriving.std ppx_deriving_yojson))
 (libraries
  logs
  current
  current_docker
  current.term
  ocaml-ci-api
  omigrate
  omigrate.sqlite3
  str
  capnp-rpc-unix
  current.cache
  ppx_deriving_yojson.runtime
  ocaml-version
  opam-0install
  current_ocluster
  ocluster-api
  solver-worker
  obuilder-spec
  dockerfile-opam))
