(executables
 (names main)
 (package ocaml-ci-service)
 (public_names ocaml-ci-service)
 (libraries logs.fmt
            fmt.tty
            current
            current_web
            current_docker
            current_git
            current_github
            current_rpc
            capnp-rpc-unix
            dockerfile
            nocrypto.lwt
            ocaml_ci
            ocaml-ci-api
            prometheus)
 (preprocess (pps ppx_deriving_yojson)))
