(executables
 (names main local)
 (package ocaml-ci-service)
 (public_names ocaml-ci-service ocaml-ci-local)
 (libraries logs.fmt
            fmt.tty
            current
            current_web
            current_docker
            current_git
            current_github
            current_rpc
            capnp-rpc-unix
            mirage-crypto-rng.unix
            ocaml_ci
            ocaml-ci-api
            ocaml_ci_solver
            prometheus)
 (preprocess (pps ppx_deriving_yojson)))
