(executables
 (names test test_lwt)
 (libraries
  ocaml_ci
  alcotest
  alcotest-lwt
  ppx_deriving_yojson.runtime
  ocaml-ci-client-lib
  ocaml-ci-web.representation
  timedesc-tzlocal.utc
  logs.fmt)
 (preprocess
  (pps ppx_deriving.eq ppx_deriving_yojson)))

(rule
 (alias runtest)
 (package ocaml-ci-service)
 (deps
  (source_tree migrations)
  (package ocaml-ci-solver))
 (action
  (run ./test_lwt.exe -e)))

(rule
 (alias runtest)
 (action
  (run ./test.exe)))
