(rule
 (target static.ml)
 (deps
  %{workspace_root}/web-ui/static/css/main.css
  (source_tree %{workspace_root}/web-ui/static/))
 (action
  (run ocaml-crunch --mode=plain --output=%{target} static)))

(executable
 (name main)
 (public_name ocaml-ci-web)
 (package ocaml-ci-web)
 (libraries
  ansi
  logs.cli
  prometheus-app.unix
  ocaml-ci
  ocaml-ci-web.controller
  ocaml-ci-web.controller.api
  ocaml-ci-web.controller.ws))
