(executables
 (names test test_lwt)
 (libraries
  ocaml_ci
  alcotest
  alcotest-lwt
  ppx_deriving_yojson.runtime
  ocaml-ci-client-lib
  timedesc-tzlocal.utc
  logs.fmt)
 (preprocess
  (pps ppx_deriving.eq ppx_deriving_yojson ppx_deriving.show)))

(rule
 (alias runtest)
 (package ocaml-ci-service)
 (deps
  (source_tree migrations)
  (package solver-service))
 (action
  (run ./test_lwt.exe -e)))

(rule
 (alias runtest)
 (package ocaml-ci-service)
 (deps
  (source_tree migrations)
  (package solver-service))
 (action
  (run ./test.exe)))
