(executables
 (names test)
 (libraries
  ocaml_ci
  ocaml-ci-service
  alcotest
  alcotest-lwt
  ppx_deriving_yojson.runtime
  timedesc-tzlocal.utc
  logs.fmt)
 (preprocess
  (pps ppx_deriving.eq ppx_deriving_yojson ppx_deriving.show)))

(rule
 (alias runtest)
 (package ocaml-ci-service)
 (deps
  (source_tree migrations)
  (package solver-service))
 (action
  (run ./test.exe)))
