(executables
 (names test)
 (libraries
  alcotest
  alcotest-lwt
  ppx_deriving_yojson.runtime
  ocaml_ci
  ocaml-ci-web.representation
  timedesc-tzlocal.utc
  logs.fmt)
 (preprocess
  (pps ppx_deriving.eq ppx_deriving_yojson)))

(rule
 (alias runtest)
 (package ocaml-ci-service)
 (deps
  (source_tree migrations))
 (action
  (run ./test.exe -e)))
